@@ -7,7 +7,7 @@ import java.io.UnsupportedEncodingException;
 import java.util.Scanner;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import javax.xml.bind.DatatypeConverter;
+import java.util.Base64;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 
@@ -195,17 +195,12 @@ public class WebSocketService {
     if (get.find()) {
       Matcher match = Pattern.compile("Sec-WebSocket-Key: (.*)").matcher(data);
       match.find();
-      byte[] response = ("HTTP/1.1 101 Switching Protocols\r\n" +
-          "Connection: Upgrade\r\n" +
-          "Upgrade: websocket\r\n" +
-          "Sec-WebSocket-Accept: " +
-          DatatypeConverter.printBase64Binary(
-            MessageDigest
-            .getInstance("SHA-1")
-            .digest((match.group(1) + "258EAFA5-E914-47DA-95CA-C5AB0DC85B11")
-              .getBytes("UTF-8"))) +
-          "\r\n\r\n")
-        .getBytes("UTF-8");
+      byte[] response = ("HTTP/1.1 101 Switching Protocols\r\n"
+      + "Connection: Upgrade\r\n"
+      + "Upgrade: websocket\r\n"
+      + "Sec-WebSocket-Accept: "
+      + Base64.getEncoder().encodeToString(MessageDigest.getInstance("SHA-1").digest((match.group(1) + "258EAFA5-E914-47DA-95CA-C5AB0DC85B11").getBytes("UTF-8")))
+      + "\r\n\r\n").getBytes("UTF-8");
       outputStream.write(response, 0, response.length);
     }
   }
